--- a/eventify/pubspec.yaml
+++ b/eventify/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   sqflite_common_ffi: ^2.3.6
   path: ^1.9.1
   shared_preferences: ^2.3.4
+  image_picker: ^1.2.1
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
